--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,3 +1,7 @@
 body {
-    background: rgb(167, 167, 172);
+    background: write;
+    text-align: center;
+    width: 80%;
+    padding: 20px;
+    margin: 20px;
 }
