--- a/estilo/style.css
+++ b/estilo/style.css
@@ -5,3 +5,13 @@ body {
     padding: 20px;
     margin: 20px;
 }
+
+footer {
+    display: auto;
+    background-color: blue;
+    color: rgb(248, 242, 242);
+    width: 100%;
+    text-align: center;
+    line-height: 98px;
+    font: size 30px;
+}
